add form styles

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,11 +1,11 @@
 .app {
   text-align: center;
 }
-.appContainer{
+
+.appContainer {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   padding: 20px;
   margin: 20px;
   border-radius: 3px;
@@ -13,32 +13,40 @@
 }
 
 .formContainer {
+  display: flex;
+  justify-content: space-between;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 600px;
   margin: 0 auto;
+  width: 100%;
+}
+
+.selectContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
 }
 
 .formTitle {
-  font-size: 24px;
-  margin-bottom: 20px;
-  text-align: center;
+  font-size: 20px;
 }
 
 .formSelect {
   width: 100%;
-  padding: 10px;
+  padding: 5px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 14px;
+  background-color: #e7eaee;
+  color: #333;
 }
 
 .formButton {
   display: block;
-  width: 100%;
+  width: 20%;
   padding: 10px;
   background-color: #007bff;
   color: white;
